--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paul Dominick Baniqued</title>
+		<title>Sasanka Kuruppu Arachchige</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,8 +18,8 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>Hello, my name is <br />Paul Dominick Baniqued.</strong><br />
-				I am an engineer of <br />robotic, virtual, and <br />neural interfaces.</a></h1>
+				<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
+				I am an engineer and a doctoral researcher of <br />Aerial robotics, Visual navigation, and <br />robust odometry.</a></h1>
 			</header>
 
 		<!-- Main -->
