--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
-				I am an engineer and a doctoral researcher of <br />Aerial robotics, Visual navigation, and <br />robust odometry.</a></h1>
+				I am an engineer and a doctoral researcher of <br />Aerial robotics, Visual navigation, and <br />Robust odometry.</a></h1>
 			</header>
 
 		<!-- Main -->
@@ -476,9 +476,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/paulobaniqued" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/paulobaniqued" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="https://www.linkedin.com/in/paulbaniqued/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<!--li><a href="https://twitter.com/paulobaniqued" class="icon fa-twitter"><span class="label">Twitter</span></a></li-->
+					<li><a href="https://github.com/sasakuruppuarachchi" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
