--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
-				I am an engineer and a doctoral researcher of <br />Aerial robotics, Visual navigation, and <br />Robust odometry.</a></h1>
+				I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and <br />Robust odometry.</a></h1>
 			</header>
 
 		<!-- Main -->
@@ -31,14 +31,14 @@
 							<h2>My work revolves around the integration of robots <br />and immersive technologies
 								such as virtual reality <br />and brain-computer interfaces</h2>
 						</header>
-						<p>I am currently a Postdoctoral Researcher at the Robotics for Extreme Environments Group based at the University of Manchester, UK.
-							I design and prototype mobile and wearable robots, cyber-physical systems, digital twins, 
-							and virtual reality environments.<br /><br />
-							I am an advocate of using innovative and cost-effective solutions to solve problems 
-							in the biomedical, education and energy sectors. Feel free to connect and chat 
+						<p>I am currently a Doctoral Researcher and a MSCA fellow at the Computer Vision Group based at the University of Tampere, Finland.
+							I design and prototype Agile Aerial robots, Aerial manipulators, Onboard Visual inertial navigation systems, digital twins of above, 
+							and learning based mathods.<br /><br />
+							I am an advocate of using robust agile robotics and edge computing to solve problems 
+							in the transportation, energy, saftey and security sectors. Feel free to connect and chat 
 							if something interesting comes your way!</p>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/paulbaniqued/" target="_blank" class="button">Learn More (Connect via LinkedIn)</a></li>
+							<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More (Connect via LinkedIn)</a></li>
 						</ul>
 					</section>
 
@@ -88,8 +88,8 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://youtube.com/playlist?list=PL4PkkfZKfcMe-_qEfLc38R_zbqPm142HL" target="_blank" class="button">Full Portfolio (YouTube)</a></li>
-							<li><a href="https://github.com/paulobaniqued" target="_blank" class="button">Code Base (GitHub)</a></li>
+							<li><a href="https://sasakuruppu.wordpress.com/" target="_blank" class="button">Full Portfolio (Wordpress)</a></li>
+							<li><a href="https://github.com/sasakuruppuarachchi" target="_blank" class="button">Code Base (GitHub)</a></li>
 						</ul>
 						<h2>Media</h2>
 						<div class="row">
