--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 	<head>
 		<title>Sasanka Kuruppu Arachchige</title>
@@ -17,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
 				I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and <br />Robust odometry.</a></h1>
 			</header>
@@ -38,6 +39,9 @@
 							in the transportation, energy, saftey and security sectors. Feel free to connect and chat 
 							if something interesting comes your way!</p>
 						<ul class="actions">
+							<li><a href="index.html" class="button primary">Home</a></li>
+							<li><a href="publications.html" class="button">Publications</a></li>
+							<li><a href="contact.html" class="button">Contact</a></li>
 							<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More (Connect via LinkedIn)</a></li>
 						</ul>
 					</section>
@@ -489,7 +493,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
