--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,13 @@
                 </ul>
 
                 <h2>Postal Address</h2>
-                    Daniel S. Johnson<br>
-                    3rd floor, Core 1E<br>
-                    Engineering Building A<br>
-                    The University of Manchester<br>
-                    Oxford Road<br>
-                    M13 9PL<br>
-                    Manchester, United Kingdom</p>
+                    Sasanka Kuruppu Arachchige<br>
+                    Room 412, 4th floor<br>
+                    Tiatalo<br>
+                    University of Tampere<br>
+                    Korkeakoulunkatu 7 Kampusareena, <br>
+                    33720<br>
+                    Tampere, Finland</p>
 
             </div>
         </div>
