Edits on new pages

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>My work revolves around the integration of robots <br />and immersive technologies
-								such as virtual reality <br />and brain-computer interfaces</h2>
+							<h2>My work revolves around the Aerial robotics <br /> Agile navigation <br />and Visual Inertial odometry</h2>
 						</header>
+						
+						<ul class="actions">
+							<li><a href="index.html" class="button primary">Home</a></li>
+							<li><a href="publications.html" class="button">Publications</a></li>
+							<li><a href="contact.html" class="button">Contact</a></li>
+							<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More</a></li>
+						</ul>
 						<p>I am currently a Doctoral Researcher and a MSCA fellow at the Computer Vision Group based at the University of Tampere, Finland.
 							I design and prototype Agile Aerial robots, Aerial manipulators, Onboard Visual inertial navigation systems, digital twins of above, 
 							and learning based mathods.<br /><br />
 							I am an advocate of using robust agile robotics and edge computing to solve problems 
 							in the transportation, energy, saftey and security sectors. Feel free to connect and chat 
 							if something interesting comes your way!</p>
-						<ul class="actions">
-							<li><a href="index.html" class="button primary">Home</a></li>
-							<li><a href="publications.html" class="button">Publications</a></li>
-							<li><a href="contact.html" class="button">Contact</a></li>
-							<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More (Connect via LinkedIn)</a></li>
-						</ul>
 					</section>
 
 				<!-- Two -->
