--- a/publications.html
+++ b/publications.html
@@ -5,23 +5,24 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 	<head>
-		<title>Daniel Stephen Johnson</title>
+		<title>Sasanka Kuruppu Arachchige</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<div class="inner">
-					<a href="https://www.linkedin.com/in/daniel-johnson-393a4016a/" class="image avatar"><img src="images/avatar.png" alt="" /></a>
-					<h1><strong>Daniel S. Johnson</strong><br />
-					Postgraduate researcher specialising in motion planning for legged robots<br /></h1>
-				</div>
-			</header>
+				<a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
+					I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and <br />Robust odometry.</a></h1>
+							</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -31,14 +32,12 @@
 						<header class="major">
 							<h2>Publications<br /></h2>
 						</header>
-						<!-- <p>This page includes information on all academic publicions to date on which I am an author.
-							  </p> -->
+						
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="publications.html" class="button primary">Publications</a></li>
-							<!-- <li><a href="https://www.linkedin.com/in/daniel-johnson-393a4016a/" class="button">Connect and chat</a></li> -->
 							<li><a href="contact.html" class="button">Contact</a></li>
-						
+						<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -424,22 +423,20 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 			-->
 
-
 			</div>
+
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/daniel-johnson-393a4016a/" class="icon brands fa-linkedin "><span class="label">Linkedin</span></a></li>
-						<li><a href="https://github.com/DanSJohnson?tab=repositories" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<li><a href="daniel.johnson-5@student.manchester.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+									<ul class="icons">
+						<!--li><a href="https://twitter.com/paulobaniqued" class="icon fa-twitter"><span class="label">Twitter</span></a></li-->
+						<li><a href="https://github.com/sasakuruppuarachchi" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="mailto:sasa.kuruppuarachchi@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; danieljohnson 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; SasaKuruppuarachchi 2024</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-				</div>
-			</footer>
+							</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -447,6 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
