--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header id="header">
 				<a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
-				I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and <br />Robust odometry.</a></h1>
+				I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and Robust odometry.</a></h1>
 			</header>
 
 		<!-- Main -->
@@ -29,7 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>My work revolves around the Aerial robotics <br /> Agile navigation <br />and Visual Inertial odometry</h2>
+							<h2>My work revolves around the Aerial robotics <br /> Agile navigation and Visual Inertial odometry</h2>
 						</header>
 						
 						<ul class="actions">
