--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
 			<header id="header">
 				<a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hello, my name is <br />Sasanka Kuruppu Arachchige.</strong><br />
-					I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and <br />Robust odometry.</a></h1>
+					I am an Engineer and a researcher in <br />Aerial robotics, Agile robot navigation, Edge computing and Robust odometry.</a></h1>
 							</header>
 
 		<!-- Main -->
