--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li><a href="index.html" class="button primary">Home</a></li>
 							<li><a href="publications.html" class="button">Publications</a></li>
 							<li><a href="contact.html" class="button">Contact</a></li>
-							<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More</a></li>
+							<li><a href="https://sasakuruppu.wordpress.com/" target="_blank" class="button">Learn More</a></li>
 						</ul>
 						<p>I am currently a Doctoral Researcher and a MSCA fellow at the Computer Vision Group based at the University of Tampere, Finland.
 							I design and prototype Agile Aerial robots, Aerial manipulators, Onboard Visual inertial navigation systems, digital twins of above, 
