--- a/publications.html
+++ b/publications.html
@@ -30,14 +30,14 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Publications<br /></h2>
+							<h2>Publications<br /><br /></h2>
 						</header>
 						
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="publications.html" class="button primary">Publications</a></li>
 							<li><a href="contact.html" class="button">Contact</a></li>
-						<li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More</a></li>
+						<li><a href="https://sasakuruppu.wordpress.com/" target="_blank" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
