--- a/contact.html
+++ b/contact.html
@@ -29,14 +29,14 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Contact<br /></h2>
+							<h2>Contact<br /><br /></h2>
 						</header>
 
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="publications.html" class="button">Publications</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
-                            <li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" target="_blank" class="button">Learn More</a></li>
+                            <li><a href="https://sasakuruppu.wordpress.com/" target="_blank" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -47,8 +47,8 @@
                 
                 <h2>Professional Profiles</h2>
                 <ul class="social-icons">
-                    <li><a href="https://www.linkedin.com/in/daniel-johnson-393a4016a/" class="icon brands fa-linkedin "><span class="label">Linkedin</span> LinkedIn Profile</a></li>
-                    <li><a href="https://github.com/DanSJohnson?tab=repositories" class="icon brands fa-github"><span class="label">Github</span> GitHub Repositories</a></li>
+                    <li><a href="https://www.linkedin.com/in/sasanka-kuruppuarachchi/" class="icon brands fa-linkedin "><span class="label">Linkedin</span> LinkedIn Profile</a></li>
+                    <li><a href="https://github.com/sasakuruppuarachchi?tab=repositories" class="icon brands fa-github"><span class="label">Github</span> GitHub Repositories</a></li>
                 </ul>
 
                 <h2>Postal Address</h2>
