--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
 
                 <h2>Email</h2>
                 <p>Email Address: <a href="mailto:sasanka.kuruppuarachchige@tuni.fi">sasanka.kuruppuarachchige@tuni.fi</a></p>
+				<p>Gmail Address: <a href="mailto:sasa.kuruppuarachchi@gmail.com">sasa.kuruppuarachchi@gmail.com</a></p>
                 
                 <h2>Professional Profiles</h2>
                 <ul class="social-icons">
