--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
 							2024. 
 							“<i>Robust Navigation Based on an Interacting Multiple-Model Filtering Framework Using Multiple Tracking Cameras.</i>” 
 							AIAA SCITECH 2024 Forum, DOI: 10.2514/6.2024-1175
-							<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2024-1175" >read more</a>
+							<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2024-1175" target="_blank" rel="noopener noreferrer">read more</a>
 							
 							<!-- Note for the entry -->
 							<!--section class="note">
@@ -65,7 +65,7 @@
 							“<i>Robust Integration of Multiple Visual-Inertial Navigation Systems.</i>” 
 							Proceedings of the Conference of the Society of Control and Robotics Systems 2022,
 							한국항공우주학회 학술발표회 초록집
-							<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11103759" >read more</a>
+							<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11103759" target="_blank" rel="noopener noreferrer">read more</a>
 
 							<!-- Note for the entry -->
 							<!-- <section class="note">
@@ -81,7 +81,7 @@
 							“<i>Custom Marker Detection and Pose Estimation for Last-Mile Delivery Problems.</i>” 
 							Proceedings of the Domestic Conference of the Society of Control and Robotics Systems 2022
 							제어로봇시스템학회 국내학술대회 논문집
-							<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11181197" >read more</a>
+							<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11181197" target="_blank" rel="noopener noreferrer">read more</a>
 							
 							<!-- Note for the entry -->
 							<!-- <section class="note">
