--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
                 <p>I'd be very happy to discuss my work, or anything else, with anyone that's interested. I am most responsive via email, but I can also be reached by post or via LinkedIn.</p>
 
                 <h2>Email</h2>
-                <p>Email Address: <a href="mailto:sasanka.kuruppuarachchige@tuni.fi">sasanka.kuruppuarachchige@tuni.fi</a></p>
-				<p>Gmail Address: <a href="mailto:sasa.kuruppuarachchi@gmail.com">sasa.kuruppuarachchi@gmail.com</a></p>
+                <p>Email Address: <a href="mailto:sasanka.kuruppuarachchige@tuni.fi">sasanka.kuruppuarachchige@tuni.fi</a>
+				Gmail Address: <a href="mailto:sasa.kuruppuarachchi@gmail.com">sasa.kuruppuarachchi@gmail.com</a></p>
                 
                 <h2>Professional Profiles</h2>
                 <ul class="social-icons">
